xiangchuan/k3s-platform/k8s-manifests/04-svc-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-app
  namespace: platform
spec:
  selector:
    app: platform-app
  ports:
    - port: 8742
      targetPort: 8742
